--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_out">Sign Out</string>
 
 </resources>
